# cmake_template

./: .gitignore  ASan.cmake  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cmakepresets.py  generate-cmakepresets.py  helloworld.cpp  main.cpp  sanitizers.cpp  use-after-free.cpp
.github/workflows/: build.yml
